[gd_scene load_steps=4 format=3 uid="uid://dx6pw8d3kjqiv"]

[ext_resource type="Script" path="res://scenes/gameObjects/game.gd" id="1_5puaj"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_he5r6"]
resource_name = "Tiles"

[sub_resource type="TileSet" id="TileSet_ycnes"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(290, 170)
sources/0 = SubResource("TileSetScenesCollectionSource_he5r6")

[node name="game" type="Node2D"]
script = ExtResource("1_5puaj")

[node name="board" type="Node2D" parent="."]
position = Vector2(640, 128)

[node name="TileMap" type="TileMap" parent="board"]
y_sort_enabled = true
tile_set = SubResource("TileSet_ycnes")
format = 2
layer_0/name = "Tuiles"

[node name="mod0" type="Marker2D" parent="board"]
position = Vector2(1080, 776)

[node name="mod1" type="Marker2D" parent="board"]
position = Vector2(1080, 496)

[node name="mod2" type="Marker2D" parent="board"]
position = Vector2(832, 776)
